--- a/client/src/app.css
+++ b/client/src/app.css
@@ -12,3 +12,11 @@
 .pretendard {
     font-family: 'Pretendard', sans-serif;
 }
+
+.box-animation {
+    transition: all 0.3s ease-in-out;
+}
+
+.button-animation {
+    transition: all 0.2s ease-in-out;
+}
